css/main.css
/* ==========================================================================
   Base styles: opinionated defaults
   ========================================================================== */

html,
button,
input,
select,
textarea {
    color: #3B447C;
}

html {
    font-size: 1em;
    line-height: 1.4;
}

::-moz-selection {
    background: #897EE6;
    text-shadow: none;
}

::selection {
    background: #897EE6;
    text-shadow: none;
}

body {
	color: #3B447C;
	background: url(../assets/bg-illu.svg) bottom -100px right -100px no-repeat fixed, linear-gradient(45deg, white 0%, #F7F8FC 100%) fixed;
    font-family: "SF Pro Display", "SF UI Display", "Helvetica Neue", Helvetica, sans-serif;
	margin: auto 0;
}

strong {
	font-weight: 600;
}

.wrapper {
    width: 60%;
	height: 70%;
    margin: auto 12%;
	position: absolute;
	top: 0;
	bottom: 0;
}

h1 {
	margin: 0;
	margin-bottom: 75px;
	
	font-size:  96px;
	font-size: 7vw;
	line-height: 1.2em;
	font-weight: 900;
	
	word-wrap: break-word;
	overflow: visible;
	
	color: #897EE6;
	background: linear-gradient(45deg, #897EE6 0%, #E67EC1 100%);
	background-clip: text;
	  -webkit-background-clip: text;
	  -webkit-text-fill-color: transparent;
}

.faceyboi {
	position: absolute;
	top: 7vw;
	left: -7vw;
	width: 3.85vw;
	height: 3.85vw;
	
	content: url(../assets/faceyboi.svg);
}

h2 {
	margin: 0;
	
	font: 2.25em/1.5em "SF Mono", Menlo, "Courier New", Courier, mono;
	font-size: 3vw;
	font-weight: 600;
	color: #BBBFDB;
}

p {
	max-width: 600px;
	
	font-size: 1em;
	line-height: 2em;
	letter-spacing: 0.4px;
}

ul.social {
	margin-top: 150px;
	padding: 0;
}

ul.social li {
	display: inline-block;
	height: 64px;
	width: 64px;
	border-radius: 32px;
	margin: 0 20px 20px 0;
	
	color: transparent;
}

li.tasklogue {
	background: url(../assets/Tasklogue.svg) no-repeat center rgba(136, 125, 230, 0.1);
}

li.email {
	background: url(../assets/Email.svg) no-repeat center rgba(230, 125, 193, 0.1);
}

li.dribbble {
	background: url(../assets/Dribbbble.svg) no-repeat center rgba(234, 75, 136, 0.1);
}

li.instagram {
	background:  url(../assets/Instagram.svg) no-repeat center, linear-gradient(45deg, rgba(188, 97, 218, 0.1) 0%, rgba(87, 125, 255, 0.1) 100%);
}

li.twitter {
	background: url(../assets/Twitter.svg) no-repeat center rgba(29, 160, 242, 0.1);
}

